src/FinancialForce Accounting/objects/codaVoidPaymentCriteria__c.object
<CustomObject>
    <customHelpPage>codahelpcancelpaymentcriteria</customHelpPage>
    <fields>
        <fullName>CancelPayment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cancel Payment Control</label>
        <referenceTo>CancelPayment__c</referenceTo>
        <relationshipLabel>Cancel Payment Criteria</relationshipLabel>
        <relationshipName>CancelPaymentCriteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CancelReason__c</fullName>
        <label>Cancel Reason</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OwnerCompany</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Cancel Payment Criteria</relationshipLabel>
        <relationshipName>CancelPaymentCriteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentRefundDate__c</fullName>
        <label>Payment Refund Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PaymentRefundPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Refund Period</label>
        <referenceTo>codaPeriod__c</referenceTo>
        <relationshipLabel>Cancel Payment Criteria (PaymentRefundPeriod)</relationshipLabel>
        <relationshipName>CancelPaymentCriteriaPaymentRefund</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentSummary__c</fullName>
        <label>Payment Summary</label>
        <referenceTo>codaPaymentAccountLineItem__c</referenceTo>
        <relationshipLabel>Cancel Payment Criteria</relationshipLabel>
        <relationshipName>CancelPaymentCriteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UndoMatchDate__c</fullName>
        <label>Undo Match Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UndoMatchPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Undo Match Period</label>
        <referenceTo>codaPeriod__c</referenceTo>
        <relationshipLabel>Cancel Payment Criteria (Undo Match)</relationshipLabel>
        <relationshipName>CancelPaymentCriteriaUndoMatch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>UnitOfWork</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cancel Payment Criteria</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Cancel Payment Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cancel Payment Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>